# cptac-fm-confounding-benchmark

./: .gitignore  README.md
analysis/: brca_clinical_with_tp53.tsv  pyproject.toml
analysis/splits/cptac_brca/ER_status/: config.yaml  k=all.tsv
analysis/src/analysis/: config.py  confounding_analysis.py  evaluate_pb.py  evaluate_pb_linprobe.py  evaluate_pb_retrieval.py  fetch_splits.py  generate_er_split.py  generate_predictions.py  pb_linprobe.py  pb_retrieval.py  pool_to_case_id.py  pten_tmb.py  utils.py
analysis/src/analysis/scripts/: pool_to_case_id.py
extraction/: .env.example  pyproject.toml
extraction/scripts/: clam_segment_patch_mstar.sh  extract_mstar_features.sh  extract_provgigapath_features.sh  extract_titan_features.sh  save_outputs.sh
extraction/src/benchmark/: paths.py  utils.py
extraction/src/benchmark/scripts/: download_cptac.py  download_weights.py  pool_mstar.py  pool_patch_features.py
