[project]
name = "titan-mstar-analysis"
version = "0.1.0"
description = "Evaluation and confounding analysis for TITAN and mSTAR on CPTAC biomarker tasks"
requires-python = ">=3.10"
dependencies = [
    # evaluation
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    "pingouin>=0.5.3",

    # data handling
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "h5py>=3.9.0",
    "torch>=2.0.0",

    # HuggingFace (for Patho-Bench splits)
    "huggingface_hub>=0.20.0",
    "datasets>=2.16.0",

    # plotting
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",

    # utilities
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "ipywidgets>=8.0.0",

    # benchmark
    "patho-bench",
]

[project.scripts]
run-linprobe  = "analysis.scripts.run_linprobe:main"
run-stratified = "analysis.scripts.run_stratified:main"
fetch-metadata = "analysis.scripts.fetch_metadata:main"

[tool.uv.sources]
patho-bench = { git = "https://github.com/mahmoodlab/Patho-Bench.git" }

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analysis"]

[tool.analysis]
slide_embeddings_dir = "data/slide_embeddings"
metadata_dir         = "data/metadata"
results_dir          = "results"
collections          = ["CPTAC-BRCA", "CPTAC-UCEC"]
models               = ["titan", "mstar"]
